--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -18,16 +18,24 @@
         android:paddingHorizontal="12dp"
         android:paddingVertical="8dp">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/articleImage"
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmer_view_container"
             android:layout_width="100dp"
             android:layout_height="0dp"
-            android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/RoundImageView"
-            tools:src="@tools:sample/avatars" />
+            app:shimmer_auto_start="false">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/articleImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/placeholder_bg"
+                android:scaleType="centerCrop"
+                app:shapeAppearanceOverlay="@style/RoundImageView" />
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
 
         <TextView
@@ -36,15 +44,15 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_toEndOf="@id/articleImage"
+            android:layout_toEndOf="@id/shimmer_view_container"
             android:ellipsize="end"
             android:maxLines="2"
             android:textSize="12sp"
             android:textStyle="bold"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintHorizontal_bias="0.0"
-            card_view:layout_constraintStart_toEndOf="@+id/articleImage"
-            card_view:layout_constraintTop_toTopOf="@+id/articleImage"
+            card_view:layout_constraintStart_toEndOf="@+id/shimmer_view_container"
+            card_view:layout_constraintTop_toTopOf="@+id/shimmer_view_container"
             tools:ignore="SmallSp"
             tools:text="@string/article_title_data" />
 
@@ -56,7 +64,7 @@
             android:gravity="center_vertical"
             android:maxLines="3"
             android:textSize="11sp"
-            card_view:layout_constraintBottom_toBottomOf="@+id/articleImage"
+            card_view:layout_constraintBottom_toBottomOf="@+id/shimmer_view_container"
             card_view:layout_constraintEnd_toEndOf="@+id/articleTitle"
             card_view:layout_constraintStart_toStartOf="@+id/articleTitle"
             card_view:layout_constraintTop_toBottomOf="@+id/articleTitle"
