--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="status_green">#4CAF50</color>
     <color name="role_yellow">#FFC107</color>
     <color name="role_magenta">#E91E63</color>
+    <color name="placeholder_bg">#dddddd</color>
 </resources>
